Add Temporary User's View

--- a/Background/test.html
+++ b/Background/test.html
@@ -82,7 +82,9 @@
             const response = await fetch(videoCommentUrl, {
                 method: "POST",
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    'Access-Control-Allow-Origin': '*',
+                    'Access-Control-Allow-Methods': "POST, PATCH"
                 },
                 body: JSON.stringify(data)
             })
